parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    LBRACKET
    RBRACKET

Grammar

Rule 0     S' -> program
Rule 1     program -> declarations_and_functions
Rule 2     declarations_and_functions -> declarations_and_functions declaration_or_function
Rule 3     declarations_and_functions -> declaration_or_function
Rule 4     declarations_and_functions -> empty
Rule 5     declaration_or_function -> preprocessor
Rule 6     declaration_or_function -> function_definition
Rule 7     declaration_or_function -> declaration
Rule 8     declaration_or_function -> statement
Rule 9     preprocessor -> INCLUDE ID DOT ID
Rule 10    preprocessor -> INCLUDE ID
Rule 11    preprocessor -> INCLUDE LT ID DOT ID GT
Rule 12    preprocessor -> INCLUDE LT ID GT
Rule 13    preprocessor -> DEFINE ID INT_LITERAL
Rule 14    preprocessor -> DEFINE ID FLOAT_LITERAL
Rule 15    function_definition -> type ID LPAREN parameter_list RPAREN compound_statement
Rule 16    function_definition -> type ID LPAREN RPAREN compound_statement
Rule 17    parameter_list -> parameter_list COMMA parameter
Rule 18    parameter_list -> parameter
Rule 19    parameter -> type pointer_declarator ID
Rule 20    parameter -> type ID
Rule 21    compound_statement -> LBRACE scope_enter statements RBRACE
Rule 22    statements -> statements statement
Rule 23    statements -> empty
Rule 24    statement -> declaration
Rule 25    statement -> assignment
Rule 26    statement -> block
Rule 27    statement -> if_statement
Rule 28    statement -> while_statement
Rule 29    statement -> for_statement
Rule 30    statement -> switch_statement
Rule 31    statement -> return_statement
Rule 32    statement -> break_statement
Rule 33    statement -> expression_statement
Rule 34    expression_statement -> expression SEMICOLON
Rule 35    expression_statement -> SEMICOLON
Rule 36    block -> LBRACE scope_enter statements RBRACE
Rule 37    scope_enter -> <empty>
Rule 38    declaration -> type ID_list SEMICOLON
Rule 39    if_statement -> IF LPAREN expression RPAREN statement
Rule 40    if_statement -> IF LPAREN expression RPAREN statement ELSE statement
Rule 41    while_statement -> WHILE LPAREN expression RPAREN statement
Rule 42    while_statement -> WHILE LPAREN expression RPAREN compound_statement
Rule 43    for_statement -> FOR LPAREN for_init SEMICOLON expression_opt SEMICOLON for_update RPAREN statement
Rule 44    for_statement -> FOR LPAREN for_init SEMICOLON expression_opt SEMICOLON for_update RPAREN compound_statement
Rule 45    for_init -> assignment_expr
Rule 46    for_init -> empty
Rule 47    for_update -> assignment_expr
Rule 48    for_update -> unary_expr
Rule 49    for_update -> empty
Rule 50    assignment_expr -> ID ASSIGN expression
Rule 51    unary_expr -> ID PLUSPLUS
Rule 52    unary_expr -> ID MINUSMINUS
Rule 53    unary_expr -> PLUSPLUS ID
Rule 54    unary_expr -> MINUSMINUS ID
Rule 55    expression_opt -> expression
Rule 56    expression_opt -> empty
Rule 57    switch_statement -> SWITCH LPAREN expression RPAREN LBRACE case_list RBRACE
Rule 58    case_list -> case_list case_clause
Rule 59    case_list -> case_clause
Rule 60    case_list -> empty
Rule 61    case_clause -> CASE INT_LITERAL COLON statements
Rule 62    case_clause -> DEFAULT COLON statements
Rule 63    return_statement -> RETURN expression SEMICOLON
Rule 64    return_statement -> RETURN SEMICOLON
Rule 65    break_statement -> BREAK SEMICOLON
Rule 66    type -> INT
Rule 67    type -> FLOAT
Rule 68    type -> CHAR
Rule 69    type -> BOOLEAN
Rule 70    type -> VOID
Rule 71    pointer_declarator -> TIMES pointer_declarator
Rule 72    pointer_declarator -> TIMES
Rule 73    ID_list -> ID_list COMMA declarator
Rule 74    ID_list -> declarator
Rule 75    declarator -> pointer_declarator ID ASSIGN expression
Rule 76    declarator -> pointer_declarator ID
Rule 77    declarator -> ID ASSIGN expression
Rule 78    declarator -> ID
Rule 79    assignment -> ID ASSIGN expression SEMICOLON
Rule 80    expression -> expression PLUS expression
Rule 81    expression -> expression MINUS expression
Rule 82    expression -> expression TIMES expression
Rule 83    expression -> expression DIVIDE expression
Rule 84    expression -> expression LT expression
Rule 85    expression -> expression GT expression
Rule 86    expression -> expression LE expression
Rule 87    expression -> expression GE expression
Rule 88    expression -> expression EQ expression
Rule 89    expression -> expression NE expression
Rule 90    expression -> expression AND expression
Rule 91    expression -> expression OR expression
Rule 92    expression -> MINUS expression
Rule 93    expression -> NOT expression
Rule 94    expression -> AMPERSAND ID
Rule 95    expression -> TIMES ID
Rule 96    expression -> PLUSPLUS ID
Rule 97    expression -> MINUSMINUS ID
Rule 98    expression -> ID PLUSPLUS
Rule 99    expression -> ID MINUSMINUS
Rule 100   expression -> LPAREN expression RPAREN
Rule 101   expression -> factor
Rule 102   factor -> INT_LITERAL
Rule 103   factor -> FLOAT_LITERAL
Rule 104   factor -> CHAR_LITERAL
Rule 105   factor -> STRING_LITERAL
Rule 106   factor -> TRUE
Rule 107   factor -> FALSE
Rule 108   factor -> ID
Rule 109   factor -> ID LPAREN argument_list RPAREN
Rule 110   factor -> ID LPAREN RPAREN
Rule 111   argument_list -> argument_list COMMA expression
Rule 112   argument_list -> expression
Rule 113   empty -> <empty>

Terminals, with rules where they appear

AMPERSAND            : 94
AND                  : 90
ASSIGN               : 50 75 77 79
BOOLEAN              : 69
BREAK                : 65
CASE                 : 61
CHAR                 : 68
CHAR_LITERAL         : 104
COLON                : 61 62
COMMA                : 17 73 111
DEFAULT              : 62
DEFINE               : 13 14
DIVIDE               : 83
DOT                  : 9 11
ELSE                 : 40
EQ                   : 88
FALSE                : 107
FLOAT                : 67
FLOAT_LITERAL        : 14 103
FOR                  : 43 44
GE                   : 87
GT                   : 11 12 85
ID                   : 9 9 10 11 11 12 13 14 15 16 19 20 50 51 52 53 54 75 76 77 78 79 94 95 96 97 98 99 108 109 110
IF                   : 39 40
INCLUDE              : 9 10 11 12
INT                  : 66
INT_LITERAL          : 13 61 102
LBRACE               : 21 36 57
LBRACKET             : 
LE                   : 86
LPAREN               : 15 16 39 40 41 42 43 44 57 100 109 110
LT                   : 11 12 84
MINUS                : 81 92
MINUSMINUS           : 52 54 97 99
NE                   : 89
NOT                  : 93
OR                   : 91
PLUS                 : 80
PLUSPLUS             : 51 53 96 98
RBRACE               : 21 36 57
RBRACKET             : 
RETURN               : 63 64
RPAREN               : 15 16 39 40 41 42 43 44 57 100 109 110
SEMICOLON            : 34 35 38 43 43 44 44 63 64 65 79
STRING_LITERAL       : 105
SWITCH               : 57
TIMES                : 71 72 82 95
TRUE                 : 106
VOID                 : 70
WHILE                : 41 42
error                : 

Nonterminals, with rules where they appear

ID_list              : 38 73
argument_list        : 109 111
assignment           : 25
assignment_expr      : 45 47
block                : 26
break_statement      : 32
case_clause          : 58 59
case_list            : 57 58
compound_statement   : 15 16 42 44
declaration          : 7 24
declaration_or_function : 2 3
declarations_and_functions : 1 2
declarator           : 73 74
empty                : 4 23 46 49 56 60
expression           : 34 39 40 41 42 50 55 57 63 75 77 79 80 80 81 81 82 82 83 83 84 84 85 85 86 86 87 87 88 88 89 89 90 90 91 91 92 93 100 111 112
expression_opt       : 43 44
expression_statement : 33
factor               : 101
for_init             : 43 44
for_statement        : 29
for_update           : 43 44
function_definition  : 6
if_statement         : 27
parameter            : 17 18
parameter_list       : 15 17
pointer_declarator   : 19 71 75 76
preprocessor         : 5
program              : 0
return_statement     : 31
scope_enter          : 21 36
statement            : 8 22 39 40 40 41 43
statements           : 21 22 36 61 62
switch_statement     : 30
type                 : 15 16 19 20 38
unary_expr           : 48
while_statement      : 28

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declarations_and_functions
    (2) declarations_and_functions -> . declarations_and_functions declaration_or_function
    (3) declarations_and_functions -> . declaration_or_function
    (4) declarations_and_functions -> . empty
    (5) declaration_or_function -> . preprocessor
    (6) declaration_or_function -> . function_definition
    (7) declaration_or_function -> . declaration
    (8) declaration_or_function -> . statement
    (113) empty -> .
    (9) preprocessor -> . INCLUDE ID DOT ID
    (10) preprocessor -> . INCLUDE ID
    (11) preprocessor -> . INCLUDE LT ID DOT ID GT
    (12) preprocessor -> . INCLUDE LT ID GT
    (13) preprocessor -> . DEFINE ID INT_LITERAL
    (14) preprocessor -> . DEFINE ID FLOAT_LITERAL
    (15) function_definition -> . type ID LPAREN parameter_list RPAREN compound_statement
    (16) function_definition -> . type ID LPAREN RPAREN compound_statement
    (38) declaration -> . type ID_list SEMICOLON
    (24) statement -> . declaration
    (25) statement -> . assignment
    (26) statement -> . block
    (27) statement -> . if_statement
    (28) statement -> . while_statement
    (29) statement -> . for_statement
    (30) statement -> . switch_statement
    (31) statement -> . return_statement
    (32) statement -> . break_statement
    (33) statement -> . expression_statement
    (66) type -> . INT
    (67) type -> . FLOAT
    (68) type -> . CHAR
    (69) type -> . BOOLEAN
    (70) type -> . VOID
    (79) assignment -> . ID ASSIGN expression SEMICOLON
    (36) block -> . LBRACE scope_enter statements RBRACE
    (39) if_statement -> . IF LPAREN expression RPAREN statement
    (40) if_statement -> . IF LPAREN expression RPAREN statement ELSE statement
    (41) while_statement -> . WHILE LPAREN expression RPAREN statement
    (42) while_statement -> . WHILE LPAREN expression RPAREN compound_statement
    (43) for_statement -> . FOR LPAREN for_init SEMICOLON expression_opt SEMICOLON for_update RPAREN statement
    (44) for_statement -> . FOR LPAREN for_init SEMICOLON expression_opt SEMICOLON for_update RPAREN compound_statement
    (57) switch_statement -> . SWITCH LPAREN expression RPAREN LBRACE case_list RBRACE
    (63) return_statement -> . RETURN expression SEMICOLON
    (64) return_statement -> . RETURN SEMICOLON
    (65) break_statement -> . BREAK SEMICOLON
    (34) expression_statement -> . expression SEMICOLON
    (35) expression_statement -> . SEMICOLON
    (80) expression -> . expression PLUS expression
    (81) expression -> . expression MINUS expression
    (82) expression -> . expression TIMES expression
    (83) expression -> . expression DIVIDE expression
    (84) expression -> . expression LT expression
    (85) expression -> . expression GT expression
    (86) expression -> . expression LE expression
    (87) expression -> . expression GE expression
    (88) expression -> . expression EQ expression
    (89) expression -> . expression NE expression
    (90) expression -> . expression AND expression
    (91) expression -> . expression OR expression
    (92) expression -> . MINUS expression
    (93) expression -> . NOT expression
    (94) expression -> . AMPERSAND ID
    (95) expression -> . TIMES ID
    (96) expression -> . PLUSPLUS ID
    (97) expression -> . MINUSMINUS ID
    (98) expression -> . ID PLUSPLUS
    (99) expression -> . ID MINUSMINUS
    (100) expression -> . LPAREN expression RPAREN
    (101) expression -> . factor
    (102) factor -> . INT_LITERAL
    (103) factor -> . FLOAT_LITERAL
    (104) factor -> . CHAR_LITERAL
    (105) factor -> . STRING_LITERAL
    (106) factor -> . TRUE
    (107) factor -> . FALSE
    (108) factor -> . ID
    (109) factor -> . ID LPAREN argument_list RPAREN
    (110) factor -> . ID LPAREN RPAREN

  ! shift/reduce conflict for INCLUDE resolved as shift
  ! shift/reduce conflict for DEFINE resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for CHAR resolved as shift
  ! shift/reduce conflict for BOOLEAN resolved as shift
  ! shift/reduce conflict for VOID resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for LBRACE resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for SWITCH resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for BREAK resolved as shift
  ! shift/reduce conflict for SEMICOLON resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for NOT resolved as shift
  ! shift/reduce conflict for AMPERSAND resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for PLUSPLUS resolved as shift
  ! shift/reduce conflict for MINUSMINUS resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for INT_LITERAL resolved as shift
  ! shift/reduce conflict for FLOAT_LITERAL resolved as shift
  ! shift/reduce conflict for CHAR_LITERAL resolved as shift
  ! shift/reduce conflict for STRING_LITERAL resolved as shift
  ! shift/reduce conflict for TRUE resolved as shift
  ! shift/reduce conflict for FALSE resolved as shift
    $end            reduce using rule 113 (empty -> .)
    INCLUDE         shift and go to state 9
    DEFINE          shift and go to state 11
    INT             shift and go to state 26
    FLOAT           shift and go to state 27
    CHAR            shift and go to state 28
    BOOLEAN         shift and go to state 29
    VOID            shift and go to state 30
    ID              shift and go to state 10
    LBRACE          shift and go to state 32
    IF              shift and go to state 33
    WHILE           shift and go to state 34
    FOR             shift and go to state 35
    SWITCH          shift and go to state 36
    RETURN          shift and go to state 37
    BREAK           shift and go to state 38
    SEMICOLON       shift and go to state 16
    MINUS           shift and go to state 39
    NOT             shift and go to state 41
    AMPERSAND       shift and go to state 42
    TIMES           shift and go to state 40
    PLUSPLUS        shift and go to state 43
    MINUSMINUS      shift and go to state 44
    LPAREN          shift and go to state 15
    INT_LITERAL     shift and go to state 12
    FLOAT_LITERAL   shift and go to state 13
    CHAR_LITERAL    shift and go to state 46
    STRING_LITERAL  shift and go to state 47
    TRUE            shift and go to state 48
    FALSE           shift and go to state 49

  ! INCLUDE         [ reduce using rule 113 (empty -> .) ]
  ! DEFINE          [ reduce using rule 113 (empty -> .) ]
  ! INT             [ reduce using rule 113 (empty -> .) ]
  ! FLOAT           [ reduce using rule 113 (empty -> .) ]
  ! CHAR            [ reduce using rule 113 (empty -> .) ]
  ! BOOLEAN         [ reduce using rule 113 (empty -> .) ]
  ! VOID            [ reduce using rule 113 (empty -> .) ]
  ! ID              [ reduce using rule 113 (empty -> .) ]
  ! LBRACE          [ reduce using rule 113 (empty -> .) ]
  ! IF              [ reduce using rule 113 (empty -> .) ]
  ! WHILE           [ reduce using rule 113 (empty -> .) ]
  ! FOR             [ reduce using rule 113 (empty -> .) ]
  ! SWITCH          [ reduce using rule 113 (empty -> .) ]
  ! RETURN          [ reduce using rule 113 (empty -> .) ]
  ! BREAK           [ reduce using rule 113 (empty -> .) ]
  ! SEMICOLON       [ reduce using rule 113 (empty -> .) ]
  ! MINUS           [ reduce using rule 113 (empty -> .) ]
  ! NOT             [ reduce using rule 113 (empty -> .) ]
  ! AMPERSAND       [ reduce using rule 113 (empty -> .) ]
  ! TIMES           [ reduce using rule 113 (empty -> .) ]
  ! PLUSPLUS        [ reduce using rule 113 (empty -> .) ]
  ! MINUSMINUS      [ reduce using rule 113 (empty -> .) ]
  ! LPAREN          [ reduce using rule 113 (empty -> .) ]
  ! INT_LITERAL     [ reduce using rule 113 (empty -> .) ]
  ! FLOAT_LITERAL   [ reduce using rule 113 (empty -> .) ]
  ! CHAR_LITERAL    [ reduce using rule 113 (empty -> .) ]
  ! STRING_LITERAL  [ reduce using rule 113 (empty -> .) ]
  ! TRUE            [ reduce using rule 113 (empty -> .) ]
  ! FALSE           [ reduce using rule 113 (empty -> .) ]

    program                        shift and go to state 1
    declarations_and_functions     shift and go to state 2
    declaration_or_function        shift and go to state 3
    empty                          shift and go to state 4
    preprocessor                   shift and go to state 5
    function_definition            shift and go to state 6
    declaration                    shift and go to state 7
    statement                      shift and go to state 8
    type                           shift and go to state 14
    assignment                     shift and go to state 17
    block                          shift and go to state 18
    if_statement                   shift and go to state 19
    while_statement                shift and go to state 20
    for_statement                  shift and go to state 21
    switch_statement               shift and go to state 22
    return_statement               shift and go to state 23
    break_statement                shift and go to state 24
    expression_statement           shift and go to state 25
    expression                     shift and go to state 31
    factor                         shift and go to state 45

state 1

    (0) S' -> program .



state 2

    (1) program -> declarations_and_functions .
    (2) declarations_and_functions -> declarations_and_functions . declaration_or_function
    (5) declaration_or_function -> . preprocessor
    (6) declaration_or_function -> . function_definition
    (7) declaration_or_function -> . declaration
    (8) declaration_or_function -> . statement
    (9) preprocessor -> . INCLUDE ID DOT ID
    (10) preprocessor -> . INCLUDE ID
    (11) preprocessor -> . INCLUDE LT ID DOT ID GT
    (12) preprocessor -> . INCLUDE LT ID GT
    (13) preprocessor -> . DEFINE ID INT_LITERAL
    (14) preprocessor -> . DEFINE ID FLOAT_LITERAL
    (15) function_definition -> . type ID LPAREN parameter_list RPAREN compound_statement
    (16) function_definition -> . type ID LPAREN RPAREN compound_statement
    (38) declaration -> . type ID_list SEMICOLON
    (24) statement -> . declaration
    (25) statement -> . assignment
    (26) statement -> . block
    (27) statement -> . if_statement
    (28) statement -> . while_statement
    (29) statement -> . for_statement
    (30) statement -> . switch_statement
    (31) statement -> . return_statement
    (32) statement -> . break_statement
    (33) statement -> . expression_statement
    (66) type -> . INT
    (67) type -> . FLOAT
    (68) type -> . CHAR
    (69) type -> . BOOLEAN
    (70) type -> . VOID
    (79) assignment -> . ID ASSIGN expression SEMICOLON
    (36) block -> . LBRACE scope_enter statements RBRACE
    (39) if_statement -> . IF LPAREN expression RPAREN statement
    (40) if_statement -> . IF LPAREN expression RPAREN statement ELSE statement
    (41) while_statement -> . WHILE LPAREN expression RPAREN statement
    (42) while_statement -> . WHILE LPAREN expression RPAREN compound_statement
    (43) for_statement -> . FOR LPAREN for_init SEMICOLON expression_opt SEMICOLON for_update RPAREN statement
    (44) for_statement -> . FOR LPAREN for_init SEMICOLON expression_opt SEMICOLON for_update RPAREN compound_statement
    (57) switch_statement -> . SWITCH LPAREN expression RPAREN LBRACE case_list RBRACE
    (63) return_statement -> . RETURN expression SEMICOLON
    (64) return_statement -> . RETURN SEMICOLON
    (65) break_statement -> . BREAK SEMICOLON
    (34) expression_statement -> . expression SEMICOLON
    (35) expression_statement -> . SEMICOLON
    (80) expression -> . expression PLUS expression
    (81) expression -> . expression MINUS expression
    (82) expression -> . expression TIMES expression
    (83) expression -> . expression DIVIDE expression
    (84) expression -> . expression LT expression
    (85) expression -> . expression GT expression
    (86) expression -> . expression LE expression
    (87) expression -> . expression GE expression
    (88) expression -> . expression EQ expression
    (89) expression -> . expression NE expression
    (90) expression -> . expression AND expression
    (91) expression -> . expression OR expression
    (92) expression -> . MINUS expression
    (93) expression -> . NOT expression
    (94) expression -> . AMPERSAND ID
    (95) expression -> . TIMES ID
    (96) expression -> . PLUSPLUS ID
    (97) expression -> . MINUSMINUS ID
    (98) expression -> . ID PLUSPLUS
    (99) expression -> . ID MINUSMINUS
    (100) expression -> . LPAREN expression RPAREN
    (101) expression -> . factor
    (102) factor -> . INT_LITERAL
    (103) factor -> . FLOAT_LITERAL
    (104) factor -> . CHAR_LITERAL
    (105) factor -> . STRING_LITERAL
    (106) factor -> . TRUE
    (107) factor -> . FALSE
    (108) factor -> . ID
    (109) factor -> . ID LPAREN argument_list RPAREN
    (110) factor -> . ID LPAREN RPAREN

    $end            reduce using rule 1 (program -> declarations_and_functions .)
    INCLUDE         shift and go to state 9
    DEFINE          shift and go to state 11
    INT             shift and go to state 26
    FLOAT           shift and go to state 27
    CHAR            shift and go to state 28
    BOOLEAN         shift and go to state 29
    VOID            shift and go to state 30
    ID              shift and go to state 10
    LBRACE          shift and go to state 32
    IF              shift and go to state 33
    WHILE           shift and go to state 34
    FOR             shift and go to state 35
    SWITCH          shift and go to state 36
    RETURN          shift and go to state 37
    BREAK           shift and go to state 38
    SEMICOLON       shift and go to state 16
    MINUS           shift and go to state 39
    NOT             shift and go to state 41
    AMPERSAND       shift and go to state 42
    TIMES           shift and go to state 40
    PLUSPLUS        shift and go to state 43
    MINUSMINUS      shift and go to state 44
    LPAREN          shift and go to state 15
    INT_LITERAL     shift and go to state 12
    FLOAT_LITERAL   shift and go to state 13
    CHAR_LITERAL    shift and go to state 46
    STRING_LITERAL  shift and go to state 47
    TRUE            shift and go to state 48
    FALSE           shift and go to state 49

    declaration_or_function        shift and go to state 50
    preprocessor                   shift and go to state 5
    function_definition            shift and go to state 6
    declaration                    shift and go to state 7
    statement                      shift and go to state 8
    type                           shift and go to state 14
    assignment                     shift and go to state 17
    block                          shift and go to state 18
    if_statement                   shift and go to state 19
    while_statement                shift and go to state 20
    for_statement                  shift and go to state 21
    switch_statement               shift and go to state 22
    return_statement               shift and go to state 23
    break_statement                shift and go to state 24
    expression_statement           shift and go to state 25
    expression                     shift and go to state 31
    factor                         shift and go to state 45

state 3

    (3) declarations_and_functions -> declaration_or_function .

    INCLUDE         reduce using rule 3 (declarations_and_functions -> declaration_or_function .)
    DEFINE          reduce using rule 3 (declarations_and_functions -> declaration_or_function .)
    INT             reduce using rule 3 (declarations_and_functions -> declaration_or_function .)
    FLOAT           reduce using rule 3 (declarations_and_functions -> declaration_or_function .)
    CHAR            reduce using rule 3 (declarations_and_functions -> declaration_or_function .)
    BOOLEAN         reduce using rule 3 (declarations_and_functions -> declaration_or_function .)
    VOID            reduce using rule 3 (declarations_and_functions -> declaration_or_function .)
    ID              reduce using rule 3 (declarations_and_functions -> declaration_or_function .)
    LBRACE          reduce using rule 3 (declarations_and_functions -> declaration_or_function .)
    IF              reduce using rule 3 (declarations_and_functions -> declaration_or_function .)
    WHILE           reduce using rule 3 (declarations_and_functions -> declaration_or_function .)
    FOR             reduce using rule 3 (declarations_and_functions -> declaration_or_function .)
    SWITCH          reduce using rule 3 (declarations_and_functions -> declaration_or_function .)
    RETURN          reduce using rule 3 (declarations_and_functions -> declaration_or_function .)
    BREAK           reduce using rule 3 (declarations_and_functions -> declaration_or_function .)
    SEMICOLON       reduce using rule 3 (declarations_and_functions -> declaration_or_function .)
    MINUS           reduce using rule 3 (declarations_and_functions -> declaration_or_function .)
    NOT             reduce using rule 3 (declarations_and_functions -> declaration_or_function .)
    AMPERSAND       reduce using rule 3 (declarations_and_functions -> declaration_or_function .)
    TIMES           reduce using rule 3 (declarations_and_functions -> declaration_or_function .)
    PLUSPLUS        reduce using rule 3 (declarations_and_functions -> declaration_or_function .)
    MINUSMINUS      reduce using rule 3 (declarations_and_functions -> declaration_or_function .)
    LPAREN          reduce using rule 3 (declarations_and_functions -> declaration_or_function .)
    INT_LITERAL     reduce using rule 3 (declarations_and_functions -> declaration_or_function .)
    FLOAT_LITERAL   reduce using rule 3 (declarations_and_functions -> declaration_or_function .)
    CHAR_LITERAL    reduce using rule 3 (declarations_and_functions -> declaration_or_function .)
    STRING_LITERAL  reduce using rule 3 (declarations_and_functions -> declaration_or_function .)
    TRUE            reduce using rule 3 (declarations_and_functions -> declaration_or_function .)
    FALSE           reduce using rule 3 (declarations_and_functions -> declaration_or_function .)
    $end            reduce using rule 3 (declarations_and_functions -> declaration_or_function .)


state 4

    (4) declarations_and_functions -> empty .

    INCLUDE         reduce using rule 4 (declarations_and_functions -> empty .)
    DEFINE          reduce using rule 4 (declarations_and_functions -> empty .)
    INT             reduce using rule 4 (declarations_and_functions -> empty .)
    FLOAT           reduce using rule 4 (declarations_and_functions -> empty .)
    CHAR            reduce using rule 4 (declarations_and_functions -> empty .)
    BOOLEAN         reduce using rule 4 (declarations_and_functions -> empty .)
    VOID            reduce using rule 4 (declarations_and_functions -> empty .)
    ID              reduce using rule 4 (declarations_and_functions -> empty .)
    LBRACE          reduce using rule 4 (declarations_and_functions -> empty .)
    IF              reduce using rule 4 (declarations_and_functions -> empty .)
    WHILE           reduce using rule 4 (declarations_and_functions -> empty .)
    FOR             reduce using rule 4 (declarations_and_functions -> empty .)
    SWITCH          reduce using rule 4 (declarations_and_functions -> empty .)
    RETURN          reduce using rule 4 (declarations_and_functions -> empty .)
    BREAK           reduce using rule 4 (declarations_and_functions -> empty .)
    SEMICOLON       reduce using rule 4 (declarations_and_functions -> empty .)
    MINUS           reduce using rule 4 (declarations_and_functions -> empty .)
    NOT             reduce using rule 4 (declarations_and_functions -> empty .)
    AMPERSAND       reduce using rule 4 (declarations_and_functions -> empty .)
    TIMES           reduce using rule 4 (declarations_and_functions -> empty .)
    PLUSPLUS        reduce using rule 4 (declarations_and_functions -> empty .)
    MINUSMINUS      reduce using rule 4 (declarations_and_functions -> empty .)
    LPAREN          reduce using rule 4 (declarations_and_functions -> empty .)
    INT_LITERAL     reduce using rule 4 (declarations_and_functions -> empty .)
    FLOAT_LITERAL   reduce using rule 4 (declarations_and_functions -> empty .)
    CHAR_LITERAL    reduce using rule 4 (declarations_and_functions -> empty .)
    STRING_LITERAL  reduce using rule 4 (declarations_and_functions -> empty .)
    TRUE            reduce using rule 4 (declarations_and_functions -> empty .)
    FALSE           reduce using rule 4 (declarations_and_functions -> empty .)
    $end            reduce using rule 4 (declarations_and_functions -> empty .)


state 5

    (5) declaration_or_function -> preprocessor .

    INCLUDE         reduce using rule 5 (declaration_or_function -> preprocessor .)
    DEFINE          reduce using rule 5 (declaration_or_function -> preprocessor .)
    INT             reduce using rule 5 (declaration_or_function -> preprocessor .)
    FLOAT           reduce using rule 5 (declaration_or_function -> preprocessor .)
    CHAR            reduce using rule 5 (declaration_or_function -> preprocessor .)
    BOOLEAN         reduce using rule 5 (declaration_or_function -> preprocessor .)
    VOID            reduce using rule 5 (declaration_or_function -> preprocessor .)
    ID              reduce using rule 5 (declaration_or_function -> preprocessor .)
    LBRACE          reduce using rule 5 (declaration_or_function -> preprocessor .)
    IF              reduce using rule 5 (declaration_or_function -> preprocessor .)
    WHILE           reduce using rule 5 (declaration_or_function -> preprocessor .)
    FOR             reduce using rule 5 (declaration_or_function -> preprocessor .)
    SWITCH          reduce using rule 5 (declaration_or_function -> preprocessor .)
    RETURN          reduce using rule 5 (declaration_or_function -> preprocessor .)
    BREAK           reduce using rule 5 (declaration_or_function -> preprocessor .)
    SEMICOLON       reduce using rule 5 (declaration_or_function -> preprocessor .)
    MINUS           reduce using rule 5 (declaration_or_function -> preprocessor .)
    NOT             reduce using rule 5 (declaration_or_function -> preprocessor .)
    AMPERSAND       reduce using rule 5 (declaration_or_function -> preprocessor .)
    TIMES           reduce using rule 5 (declaration_or_function -> preprocessor .)
    PLUSPLUS        reduce using rule 5 (declaration_or_function -> preprocessor .)
    MINUSMINUS      reduce using rule 5 (declaration_or_function -> preprocessor .)
    LPAREN          reduce using rule 5 (declaration_or_function -> preprocessor .)
    INT_LITERAL     reduce using rule 5 (declaration_or_function -> preprocessor .)
    FLOAT_LITERAL   reduce using rule 5 (declaration_or_function -> preprocessor .)
    CHAR_LITERAL    reduce using rule 5 (declaration_or_function -> preprocessor .)
    STRING_LITERAL  reduce using rule 5 (declaration_or_function -> preprocessor .)
    TRUE            reduce using rule 5 (declaration_or_function -> preprocessor .)
    FALSE           reduce using rule 5 (declaration_or_function -> preprocessor .)
    $end            reduce using rule 5 (declaration_or_function -> preprocessor .)


state 6

    (6) declaration_or_function -> function_definition .

    INCLUDE         reduce using rule 6 (declaration_or_function -> function_definition .)
    DEFINE          reduce using rule 6 (declaration_or_function -> function_definition .)
    INT             reduce using rule 6 (declaration_or_function -> function_definition .)
    FLOAT           reduce using rule 6 (declaration_or_function -> function_definition .)
    CHAR            reduce using rule 6 (declaration_or_function -> function_definition .)
    BOOLEAN         reduce using rule 6 (declaration_or_function -> function_definition .)
    VOID            reduce using rule 6 (declaration_or_function -> function_definition .)
    ID              reduce using rule 6 (declaration_or_function -> function_definition .)
    LBRACE          reduce using rule 6 (declaration_or_function -> function_definition .)
    IF              reduce using rule 6 (declaration_or_function -> function_definition .)
    WHILE           reduce using rule 6 (declaration_or_function -> function_definition .)
    FOR             reduce using rule 6 (declaration_or_function -> function_definition .)
    SWITCH          reduce using rule 6 (declaration_or_function -> function_definition .)
    RETURN          reduce using rule 6 (declaration_or_function -> function_definition .)
    BREAK           reduce using rule 6 (declaration_or_function -> function_definition .)
    SEMICOLON       reduce using rule 6 (declaration_or_function -> function_definition .)
    MINUS           reduce using rule 6 (declaration_or_function -> function_definition .)
    NOT             reduce using rule 6 (declaration_or_function -> function_definition .)
    AMPERSAND       reduce using rule 6 (declaration_or_function -> function_definition .)
    TIMES           reduce using rule 6 (declaration_or_function -> function_definition .)
    PLUSPLUS        reduce using rule 6 (declaration_or_function -> function_definition .)
    MINUSMINUS      reduce using rule 6 (declaration_or_function -> function_definition .)
    LPAREN          reduce using rule 6 (declaration_or_function -> function_definition .)
    INT_LITERAL     reduce using rule 6 (declaration_or_function -> function_definition .)
    FLOAT_LITERAL   reduce using rule 6 (declaration_or_function -> function_definition .)
    CHAR_LITERAL    reduce using rule 6 (declaration_or_function -> function_definition .)
    STRING_LITERAL  reduce using rule 6 (declaration_or_function -> function_definition .)
    TRUE            reduce using rule 6 (declaration_or_function -> function_definition .)
    FALSE           reduce using rule 6 (declaration_or_function -> function_definition .)
    $end            reduce using rule 6 (declaration_or_function -> function_definition .)


state 7

    (7) declaration_or_function -> declaration .
    (24) statement -> declaration .
